--- a/elements/trove-guest/openstack-trove-guestagent.service
+++ b/elements/trove-guest/openstack-trove-guestagent.service
@@ -5,7 +5,7 @@ After=syslog.target network.target cloud-init.service
 [Service]
 Type=simple
 User=trove
-ExecStart=/usr/bin/trove-guestagent --config-file /etc/trove/trove-guestagent.conf --config-file /etc/trove/guest_info.conf
+ExecStart=/usr/bin/trove-guestagent --config-file /etc/trove-guestagent.conf --config-file /etc/guest_info
 Restart=on-failure
 
 [Install]
